# TSL

./: .gitignore  .gitmodules  .gitmodules.old  CMakeLists.txt  Dockerfile  Doxyfile  README.md  build.sh  detect_flags.py  detect_flags.sh  index.html  main.py  needs_rebuild.py  neon.sh  parseForPrimitiveTable.py  primitive_classes.yaml  primitive_table.template  rebuild_fileslist.py  requirements.txt  target_specs.json  test_definitions_intel.sh  tsl.cmake  tslgen.cmake  tvleditor.py  tvlgen.py  xx.req.txt
.github/actions/tsl-deb-build/: Dockerfile  README.md  action.yml  control  entrypoint.sh  postinst  postrm
.github/actions/tsl-generate/: Dockerfile  README.md  action.yml  entrypoint.sh  target_flags_translate.py
.github/actions/tsl-generator-all-in-one/: Dockerfile
.github/actions/tsl-rpm-build/: Dockerfile  README.md  action.yml  entrypoint.sh  tsl.spec
.github/actions/tsl-test-arm/: Dockerfile  README.md  action.yml  entrypoint.sh
.github/actions/tsl-test-x86/: Dockerfile  README.md  action.yml  entrypoint.sh
.github/actions/tsl-validate/: Dockerfile  README.me  action.yml  entrypoint.sh
.github/workflows/: arm-build-and-test-success.yml  arm-generation-success.yml  badge_generation.yml  badge_ghpages.yml  badge_package_deb.yml  badge_package_rpm.yml  badge_package_tarball.yml  badge_testing_aarch64.yml  badge_testing_x86.yml  build-and-test.yml  build_and_push_dockerhub.yml  build_library_pipeline.yml  ci.yml  delete_dockerhub.yml  generate_build_tvl.yml  generation-success.yml  generator_integrity_check_pipeline.yml  ghpage.yml  install_tsl.sh  publish-latest.yml  push.yml  release-tsl.yml  release.yml  setup-environment.yml  target_specs.json  target_specs_complete.json  target_specs_test.json  test_library_pipeline.yml  test_tvlgen.yml  tslgen_merge_main.yaml  tslgen_pr.yml  tvlgen_merge_main.yaml  tvlgen_pr.yml  update_tvl.yml  update_tvl_gen.yml  upload_indexhtml.yml  validate-tsl.yml  validate.yml  x86-build-and-test-success.yml  x86-generation-success.yml
.github/workflows/depr/: tslgen_merge_main.yaml
.github/workflows/docker/: compile_ubuntu.dockerfile  emulate_aarch64_ubuntu.dockerfile  emulate_x86_archlinux.dockerfile  generate_ubuntu.dockerfile  package_brew_archlinux.dockerfile  package_deb_ubuntu.dockerfile  package_rpm_fedora.dockerfile
.github/workflows/release/: prepare_select_flavor.py  select_flavor.sh  test.cpp
.github/workflows/utils/: badge_creation.py  validate_tsl.sh
config/: default_conf.yaml  log_conf.yaml  tvlgen_schema.py  tvlgen_templates.py
config/data/: tvl_generator_schema.yaml
config/data/templates/: tvl_doxygen_file.template  tvl_doxygen_function.template  tvl_extension.template  tvl_header_file.template  tvl_license.template  tvl_primitive_declaration.template  tvl_primitive_definition.template
config/generator/: tvl_generator_schema.yaml
core/: tvl_config.py  tvl_generator.py  tvl_primitive.py  tvlgen_file.py  tvlgenerator.py
core/ctrl/: tvl_lib.py  tvl_libfile_generator.py  tvl_slicer.py
core/generators/: tvlgen_extension.py  tvlgen_primitive.py
core/model/: tvl_extension.py  tvl_file.py  tvl_primitive.py
doc/: Contribution.md  GeneratorUsage.md  GettingStarted.md
doc/apidoc/: conf.py
doc/www/: index.html
editor/template_generator/: template_generator.py
editor/template_generator/templates/: custom_form.template  form.template
examples/oneAPIfpga/: CMakeLists.txt  build.sh  clz_rtl_example.cpp
examples/usage_of_tsl/: CMakeLists.txt  README.md  build.sh  main.cpp
expansions/: tvl_cmake.py  tvl_documentation.py  tvl_readme_md.py  tvl_translation_unit.py  tvl_unit_test.py
extensions/: scalar.yaml
extensions/simd/arm/: neon.yaml
extensions/simd/intel/: avx2.yaml  avx512.yaml  fpga.yaml  sse.yaml
extensions/simt/: cuda.yaml
generator/config/: default_conf.yaml  log_conf.yaml
generator/config/generator/: tsl_generator_schema.yaml
generator/core/: tsl_config.py  tsl_generator.py  tvl_config.py  tvl_generator.py
generator/core/ctrl/: tsl_dependencies.py  tsl_dependendies.py  tsl_lib.py  tsl_libfile_generator.py  tsl_slicer.py  tvl_lib.py  tvl_libfile_generator.py  tvl_slicer.py
generator/core/model/: tsl_extension.py  tsl_file.py  tsl_primitive.py  tvl_extension.py  tvl_file.py  tvl_primitive.py
generator/core/utils/: tsl_misc.py  tsl_type_mappings.py  tvl_type_mappings.py
generator/expansions/: tsl_cmake.py  tsl_readme_md.py  tsl_translation_unit.py  tsl_unit_test.py  tvl_cmake.py  tvl_readme_md.py  tvl_translation_unit.py  tvl_unit_test.py
generator/static_files/core/: tsl_static.yaml  tslintrin.yaml
generator/utils/: dict_utils.py  file_utils.py  git_utils.py  log_utils.py  requirement.py  yaml_schema.py  yaml_utils.py
primitive_data/: README.md
primitive_data/.github/workflows/: ci.yml
primitive_data/extensions/: scalar.yaml
primitive_data/extensions/simt/: cuda.yaml
primitive_data/primitives/: binary.yaml  calc.yaml  compare.yaml  complex.yaml  convert.yaml  io.yaml  ls.yaml  mask.yaml  mask_ls.yaml  memory.yaml  misc.yaml
primitives/: binary.yaml  calc.yaml  compare.yaml  convert.yaml  io.yaml  ls.yaml  mask.yaml  memory.yaml  misc.yaml
static_files/: tvlintrin.yaml
static_files/core/: tvl_static.yaml  tvlintrin.yaml
static_files/core/simd/: simd_type.yaml  simd_type_concepts.yaml
static_files/core/utils/: preprocessor.yaml  type_concepts.yaml  type_helper.yaml
static_files/expansions/tests/: test_functions.yaml  test_functionsyaml.old
static_files/static/: tvl_static.yaml
static_files/static/simd/: simd_primitive_concepts.yaml  simd_type.yaml  simd_type_concepts.yaml
static_files/static/utils/: preprocessor.yaml  type_concepts.yaml  type_helper.yaml
supplementary/oneApiFPGA/: CMakeLists.txt  generate_lib.sh  one_api_lib_create.cmake
supplementary/oneApiFPGA/include/: tslOneAPIfpgaHelper.hpp  tslOneAPIfpgaRTL.hpp
utils/: cpp_utils.py  dict_utils.py  file.py  file_template.py  file_utils.py  git_utils.py  log.py  log_utils.py  schema.py  template.py  type.py  yaml.py  yaml_schema.py  yaml_utils.py
(+67 files in other folders)
